--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,78 @@
-.App {
+.main-title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.post-container {
+  width: 50%;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post-inner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 3em;
 }
 
-.App-link {
-  color: #09d3ac;
+.post-container {
+  margin: auto;
+}
+
+.post-inner h1 {
+  font-family: sans-serif;
+  font-style: italic;
+}
+
+.post-inner figure {
+  box-shadow: #ccc4c4 0px 5px 19px 6px;
+  padding: 2em 0;
+  width: 700px;
+  height: 450px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.post-inner figcaption {
+  font-weight: bold;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  padding-left: 1em;
+}
+
+.post-inner img {
+  width: 100%;
+}
+
+.image-submission {
+  width: 500px;
+  margin: auto;
+  text-align: center;
+  padding: 2em 0;
+}
+
+.image-submission input {
+  border: none;
+  padding: 10px;
+  font-size: 15px;
+  width: 50%;
+  text-align: center;
+  margin-bottom: 1em;
+  border-bottom: 2px solid #4a464624;
+}
+
+.image-submission .image-submit {
+  border: 1px solid #0000003b;
+  padding: 0.5em;
+  width: 35%;
+  margin: auto;
+  font-size: 1em;
+  font-family: sans-serif;
+  font-size: 15px;
+}
+
+.image-submission .image-submit:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
